sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:5: error: not found: value n
  for (i <- 1 to n-1) {
                 ^